fix html,css, js

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -89,8 +89,6 @@ button[type='submit']:hover {
   cursor: pointer;
 }
 
-/* Loader */
-
 .dual-ring-loader {
   display: inline-block;
   width: 64px;
@@ -150,7 +148,6 @@ button[type='submit']:hover {
   font-weight: 500;
 }
 
-/* Gallery styles */
 .gallery {
   list-style: none;
   padding: 0;
@@ -184,4 +181,25 @@ button[type='submit']:hover {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+
+#load-more-btn {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 125px;
+  height: 40px;
+  background: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin: 20px auto;
+}
+
+#load-more-btn:hover {
+  background-color: #6c8cff;
 }
